--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#gallery">Gallery</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Us</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -219,6 +222,36 @@
     </div>
           
   </section>
+  <!--contact us-->
+      <section id="contact">
+        <div class="container">
+          <div class="row-mb-4 ">
+            <div class="col text-center">
+              <h2>Contact Us</h2>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-6">
+              <form>
+                <div class="mb-3">
+                  <label for="name" class="form-label"> Nama</label>
+                  <input type="text" class="form-control" id="name" aria-describedby="name">
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email">
+                </div>
+                <div class="mb-3">
+                   <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
+                   <textarea class="form-control" id="pesan" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Kirim</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,128L48,133.3C96,139,192,149,288,165.3C384,181,480,203,576,229.3C672,256,768,288,864,272C960,256,1056,192,1152,181.3C1248,171,1344,213,1392,234.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </section>
 
   
   <footer class="bg-white text-black text-center">
