--- a/index.html
+++ b/index.html
@@ -232,20 +232,30 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-6">
-              <form>
+              <form name="submit-to-google-sheet">
+
+                <!--Alert-->
+                <div class="alert alert-warning alert-dismissible fade show d-none pesan-terkirim" role="alert">
+                     <strong>Terima Kasih!</strong> Pesan Anda Telah kami terima
+                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
                 <div class="mb-3">
                   <label for="name" class="form-label"> Nama</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name">
+                  <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="mb-3">
                    <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
-                   <textarea class="form-control" id="pesan" rows="3"></textarea>
+                   <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Kirim</button>
+                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                <button class="btn btn-primary d-none btn-loading"  type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    Loading...
+                </button>
               </form>
             </div>
           </div>
@@ -259,5 +269,35 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzer7nSHROI_D0zX_Lo_1gCUGvzuIOAg8rEJ3JM4HF1vTHzgp3lcq-ziRCUt7Gg9WqM3w/exec'
+      const form = document.forms['submit-to-google-sheet']
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const pesanTerkirim = document.querySelector('.pesan-terkirim');
+
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+
+    /*tombol loading muncul saat tombol kirim hilang*/
+    btnKirim.classList.toggle('d-none');
+    btnLoading.classList.toggle('d-none');
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => {console.log('Success!', response)
+        /*loading hilang, tombol kirim muncul*/
+         btnKirim.classList.toggle('d-none');
+         btnLoading.classList.toggle('d-none');
+         /*setelah berhasil muncul alert*/
+         pesanTerkirim.classList.toggle('d-none');
+
+         /*reset form*/
+         form.reset();
+
+       })
+      .catch(error => console.error('Error!', error.message))
+  })
+  </script>
   </body>
 </html>
