--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!----favicon----->
-    <link rel="stylesheet" href="img/megaphone.png">
+    <link rel="shortcut icon" href="img/lya.jpg">
     <!---google font--->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
