--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+     <!--AOS-->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
     <!--my css-->
     <link rel="stylesheet" href="style.css">
     <!--bootsrap icon-->
@@ -73,7 +77,7 @@
             <p>(나에 대해서)</p>
           </div>
         </div>
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-evenly" data-aos="fade-left"  data-aos-duration="1000">
              <div class="col-4 text-center">
              <p>I am tde only child and grandson, my fatder is Pardiansah and my motder's name is Nurhamidah
               I have 10 pet cats, I feed tdem twice a dayI usually live my days witd various activities tdat I find quite useful, starting from feeding my pet cat, morning and evening exercise, studying cooking recipes, writing novels, studying UTBK SAINTEK, singing, learning foreign languages, dzikir, praying 5 times a day correctly. time, gardening.
@@ -223,7 +227,7 @@
           
   </section>
   <!--contact us-->
-      <section id="contact">
+     <section id="contact">
         <div class="container">
           <div class="row-mb-4 ">
             <div class="col text-center">
@@ -269,6 +273,22 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+
+      const kartuGallery = document.querySelectorAll('.card');
+
+      kartuGallery.forEach((kartu, i) => {
+         kartu.dataset.aos = 'flip-left';
+         kartu.dataset.aosDuration = '2000';
+         kartu.dataset.aosDelay = i * 200;
+      });
+
+    AOS.init({
+      once: true,
+    });
+    </script>
 
   <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbzer7nSHROI_D0zX_Lo_1gCUGvzuIOAg8rEJ3JM4HF1vTHzgp3lcq-ziRCUt7Gg9WqM3w/exec'
