--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
     </nav>
     <!-akhir navbar->
 
-    <!--jombotron-->
+    <!----------------------------------------jombotron------------------------------------------------>
 
     <div class="jumbotron text-center mb-3 mt-5">
       <img src="img/muya.jpg" width="400px" class="rounded-circle img-thumbnail">
         <h1 class="display-4">차멜리아 푸트리 디안사</h1>
-        <p class="lead">Fresh Graduate </p>
+        <p class="lead"> </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="pink" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,165.3C672,171,768,149,864,149.3C960,149,1056,171,1152,165.3C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </div>
 
-    <!--akhir jumbotron-->
+    <!---------------------------------------akhir jumbotron------------------------------------------->
 
-    <!--about me-->
+    <!-----------------------------------------about me------------------------------------------------>
     <section id="about">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="pink" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,165.3C672,171,768,149,864,149.3C960,149,1056,171,1152,165.3C1248,160,1344,128,1392,112L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
       <div class="container">
@@ -80,7 +80,7 @@
         <div class="row justify-content-evenly" data-aos="fade-left"  data-aos-duration="1000">
              <div class="col-4 text-center">
              <p>I am tde only child and grandson, my fatder is Pardiansah and my motder's name is Nurhamidah
-              I have 10 pet cats, I feed tdem twice a dayI usually live my days witd various activities tdat I find quite useful, starting from feeding my pet cat, morning and evening exercise, studying cooking recipes, writing novels, studying UTBK SAINTEK, singing, learning foreign languages, dzikir, praying 5 times a day correctly. time, gardening.
+              I have 10 pet cats, I feed tdem twice a dayI usually live my days witd various activities tdat I find quite useful, starting from feeding my pet cat, morning and evening exercise, studying cooking recipes, writing novels, studying UTBK SAINTEK, singing, learning foreign languages, dzikir, praying 5 times a day correctly, time, gardening.
 
               I just finished my education at tde high school level in July 2021. Now to fill my void while waiting for registration to open for college, I'm trying to take part in tde job training program held in Muara Enim Regency</p>
              </div>
@@ -134,7 +134,7 @@
               <tr>
                 <td scope="row">AMBITION</td>
                 <td>:</td>
-                <td>Cancer Specialist Doctor</td>
+                <td>Doctor</td>
               </tr>
             </div>
           </tbody>
@@ -232,6 +232,7 @@
           <div class="row-mb-4 ">
             <div class="col text-center">
               <h2>Contact Us</h2>
+              <p>(문의하기)</p>
             </div>
           </div>
           <div class="row justify-content-center">
@@ -288,6 +289,26 @@
     AOS.init({
       once: true,
     });
+    </script>
+
+
+     <!--GSAP-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
+
+    <script>
+      /*gsap.from('.jumbotron img', {y: -100, duration:1, ease: 'bounce'});*/
+
+      gsap.registerPlugin(TextPlugin);
+
+      gsap.to('.lead', {duration:2, text: "Fresh Graduate ", ease:'none'});
+
+      gsap.from('.jumbotron img', {rotateY: 360, duration: 1, opacity:0});
+
+      gsap.from('.navbar', {y: -100, opacity:0, ease:'bounce', duration:1.5});
+
+      gsap.from('.display-4', {x:-100, opacity:0, ease:'back', duration:1});
     </script>
 
   <script>
